src/test/resources/testData/annotation.semantic/ConstructorMustNotBeStatic.hx
class Test {
  static public function <error descr="Constructor can't be static">new</error>() {}
}